--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
                     <h2>(Watch Now)</h2>
                     <div class="pb-4">
                         <img src="img/YouTubeImg.png" alt="YouTube Image" width="100%">
-                        <a href="https://www.healthline.com/health/gingivitis"> 
-                            <button type="button" class="btn btn-success btn-lg"
-                            style="--bs-btn-padding-y: 1rem; --bs-btn-padding-x: 10rem; --bs-btn-font-size: 2rem;">
+                          <button type="button" class="btn btn-success btn-lg"
+                            style="--bs-btn-padding-y: 1rem; --bs-btn-padding-x: 10rem; --bs-btn-font-size: 2rem;"
+                            onclick="window.open('https://thedentivive.com/video.php?aff_id=4746&subid=', 'popup')">
                             Watch Now
-                            </button>
-                        </a>
+                          </button>
                     </div>
                 </div>
             </div>
@@ -68,11 +67,12 @@
                         </ul>
                     </div>
                     <div class="text-center">
-                        <a href="https://thedentivive.com/video.php?aff_id=4746&subid=">
+                        <a href="https://en.wikipedia.org/wiki/Gingivitis" target="_blank">
                             <button type="button" class="btn btn-success btn-lg"
-                                style="--bs-btn-padding-y: 1rem; --bs-btn-padding-x: 10rem; --bs-btn-font-size: 2rem;">
+                                 style="--bs-btn-padding-y: 1rem; --bs-btn-padding-x: 10rem; --bs-btn-font-size: 2rem;">
                                 <span class="glyphicon glyphicon-book"></span>
-                                Learn More</button>
+                                 Learn More
+                             </button>
                         </a>
                     </div>
                 </div>                                
@@ -82,10 +82,10 @@
 
     <div class=" d-flex row justify-content-center">   
         <div class="col-2" id="links">
-            <a href="https://healthyweekdays.com/privacy" class="stretched-link">Privacy</a> <span>|</span>
-            <a href="https://healthyweekdays.com/disclaimer" class="stretched-link">Disclaimer</a> <span>|</span>
-            <a href="https://healthyweekdays.com/dmca" class="stretched-link">DMCA </a> <span>|</span>
-            <a href="#" class="stretched-link">Contact</a>  
+            <a href="https://healthyweekdays.com/privacy" target="_blank">Privacy</a> <span>|</span>
+            <a href="https://healthyweekdays.com/disclaimer" target="_blank">Disclaimer</a> <span>|</span>
+            <a href="https://healthyweekdays.com/dmca" target="_blank">DMCA </a> <span>|</span>
+            <a href="#" target="_blank">Contact</a>  
         </div>    
 
         <img src="img/References.png" alt="scientific references" width="auto">       
